gestion des tokens + get topics ok
