# src/router/TopicRouter.ts
@@ -1,4 +1,7 @@
-import express from 'express';
+import { JwtNotInHeaderException } from '@/exceptions/JwtExceptions';
+import AuthentificationService from '@/services/AuthentificationService';
+import TopicService from '@/services/TopicService';
+import express, { NextFunction, Request, Response } from 'express';
 
 const TopicRouter = express.Router();
 
@@ -10,6 +13,35 @@ TopicRouter.post('/', async (req, res) => {
         res.status(201)
     } catch (error) {
         console.log(error);
+    }
+});
+
+TopicRouter.get('/', async (req: Request, res: Response, next: NextFunction) => {
+    /**
+        #swagger.tags = ['Topic']
+        #swagger.summary = 'Endpoint to get topics.'
+        #swagger.parameters['query'] = {
+            page: 1
+        }
+        #swagger.responses[200] = {
+            description: 'Topics found',
+            schema: { $ref: "#/definitions/TopicOutputDefinition" }
+        }
+        #swagger.responses[500] = {
+            description: 'An error occured'
+        }
+     */
+    try {
+        const token = req.headers.authorization;
+        if(!token) {
+            throw new JwtNotInHeaderException();
+        }
+        await AuthentificationService.checkToken(token);
+        const page = Number(req.query.page) || 1;
+        const topics = await TopicService.getTopics(page)
+        res.status(200).send(topics);
+    } catch (error) {
+        next(error);
     }
 });
 
@@ -34,3 +66,5 @@ TopicRouter.get('/:id/children', async (req, res) => {
         console.log(error);
     }
 });
+
+export default TopicRouter;
